# StatelessAlerts

./: .dockerignore  Cargo.toml  README.md  dockerfile
.github/workflows/: rust-ci.yml
src/: handlers.rs  main.rs  models.rs
