[package]
name = "backend"
version = "0.1.0"
edition = "2021"



[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
